--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,11 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}-->
 
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">code on github/a></p>
+        <p class="view"><a href="{{ copyingourselves.substack.com }}">copying ourselves on substack/a></p>
+        <p class="view"><a href="{{ https://neurallumination.io/ }}">neurallumination.io/a></p>
+          
+
 
         {% if site.show_downloads %}
         <ul class="downloads">
