--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
         {% endif %}-->
 
         <p class="view"><a href="{{ site.github.owner_url }}">code on github</a></p>
-        <p class="view"><a href="{{ copyingourselves.substack.com }}">copying ourselves on substack</a></p>
-        <p class="view"><a href="{{ https://neurallumination.io/ }}">neurallumination.io</a></p>
-          
-
+        <p class="view"><a href="https://copyingourselves.substack.com">copying ourselves on substack</a></p>
+        <p class="view"><a href="https://neurallumination.io">neurallumination.io</a></p>
+        <p class="view"><a href="https://drive.google.com/file/d/1JZJL8LvHt4e1wSi6s5kyWi3zgS92PRyt/view">cv</a></p>  
+        
 
         {% if site.show_downloads %}
         <ul class="downloads">
